--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<h2>Sign up</h2>
+<div class="form-box">
+  <div class="head">Register</div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:id => 'login-form'}) do |f| %>
+      <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="my-form-group">
+        <label class="my-label-control">
+          <span class="my-label-text">Email</span>
+        </label>
+        <%= f.email_field :email, autofocus: true, class: 'my-form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <div class="my-form-group">
+        <label for="" class="my-label-control">
+          <span class="my-label-text">Password <sup>(minimum <%= @minimum_password_length %>)</sup></span>
+        </label>
+        <%= f.password_field :password, autocomplete: 'off', class: 'my-form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="my-form-group">
+        <label for="" class="my-label-control">
+          <span class="my-label-text">Password confirmation</span>
+        </label>
+        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'my-form-control' %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <%= f.submit 'Sign up', class: 'login-btn'%>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+      <%- if controller_name != 'sessions' %>
+          <span>Have account?</span>
+          <%= link_to 'Log in', new_session_path(resource_name) %><br />
+      <% end -%>
+  <% end %>
+</div>
