--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,42 +1,35 @@
-<div class="form-box">
-  <div class="head">Edit <%= resource_name.to_s.humanize %></div>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:id => 'login-form', method: :put}) do |f| %>
-      <%= devise_error_messages! %>
+<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-      <div class="my-form-group">
-        <label class="my-label-control">
-          <span class="my-label-text">Email</span>
-        </label>
-        <%= f.email_field :email, autofocus: true, class: 'my-form-control' %>
-      </div>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= f.error_notification %>
 
-      <div class="my-form-group">
-        <label class="my-label-control">
-          <span class="my-label-text">New password</span>
-        </label>
-        <%= f.password_field :password, autocomplete: 'off', class: 'my-form-control' %>
-      </div>
+  <div class="form-inputs">
+    <%= f.input :email, required: true, autofocus: true %>
 
-      <div class="my-form-group">
-        <label class="my-label-control">
-          <span class="my-label-text">Password confirmation</span>
-        </label>
-        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'my-form-control' %>
-      </div>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <% end %>
 
-      <div class="my-form-group">
-        <label class="my-label-control">
-          <span class="my-label-text">Current password <sup>(we need your current password to confirm your changes)</sup></span>
-        </label>
-        <%= f.password_field :current_password, autocomplete: 'off', class: 'my-form-control' %>
-      </div>
+    <%= f.input :password,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :password_confirmation,
+                required: false,
+                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :current_password,
+                hint: "we need your current password to confirm your changes",
+                required: true,
+                input_html: { autocomplete: "current-password" } %>
+  </div>
 
-      <%= f.submit 'Update', class: 'login-btn'%>
+  <div class="form-actions">
+    <%= f.button :submit, "Update" %>
+  </div>
+<% end %>
 
-        <h4>Unhappy? :( </h4>
-          <p><%= link_to 'Delete my account', registration_path(resource_name),class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' }, method: :delete %>
-          </p>
-      <%= link_to 'Back', :back, class: 'btn btn-default links' %>
+<h3>Cancel my account</h3>
 
-  <% end %>
-</div>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+<%= link_to "Back", :back %>
