--- a/app/views/resumes/_form.html.erb
+++ b/app/views/resumes/_form.html.erb
@@ -23,15 +23,15 @@
           <div class="text-center"><h4>Basic information</h4></div>
           <hr>
             <div class="form-group">
-              <%= f.text_field :name, class: 'ever-inputs', placeholder: 'Name*' %>
+              <%= f.text_field :name_user, class: 'ever-inputs', placeholder: 'Name*' %>
             </div>
 
             <div class="form-group">
-              <%= f.text_area :general_info, class: 'ever-inputs', placeholder: 'General information*' %>
+              <%= f.text_area :user_info, class: 'ever-inputs', placeholder: 'General information*' %>
             </div>
 
             <div class="form-group">
-              <%= f.text_field :interests, class: 'ever-inputs', placeholder: 'Interests*' %>
+              <%= f.text_field :user_interest, class: 'ever-inputs', placeholder: 'Interest*' %>
             </div>
 
             <div class="form-group fileUpload btn btn-primary">
@@ -43,90 +43,28 @@
 
       </div>
 
-<br>
+     
+      
 
+       
 
+      
 
-
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1 card">
-          <div id="skills">
-            <div class="text-center"><h4>Skills</h4></div>
-            <hr>
-            <%#= f.fields_for :skills do |skill| %>
-                <%#= render 'skill_fields', f: skill %>
-            <%# end %>
-            <div class="text-right">
-              <%#= link_to_add_association 'Add more', f, :skills, class: 'add-buttons pull-right' %>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1 card">
-          <div class="text-center"><h4>Project Experience</h4></div>
-          <hr>
-          <div id="projects">
-            <%#= f.fields_for :projects do |project| %>
-                <%#= render 'projects_fields', f: project %>
-            <%# end %>
-            <div class="text-right">
-              <%#= link_to_add_association 'Add more', f, :projects, partial: 'projects_fields', class: 'add-buttons pull-right' %>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="col-md-10 col-md-offset-1 card">
-          <div class="text-center"><h4>Job Experience</h4></div>
-          <hr>
-          <div id="jobs">
-            <%#= f.fields_for :jobs do |job| %>
-                <%#= render 'jobs_fields', f: job %>
-            <%# end %>
-            <div class="text-right">
-              <%#= link_to_add_association 'Add more', f, :jobs, partial: 'jobs_fields', class: 'add-buttons pull-right' %>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1 card">
-          <div class="text-center"><h4>Education</h4></div>
-          <hr>
-          <div id="education">
-            <%= f.fields_for :educations do |education| %>
-
-              <%= render 'educations', f: education %>
-            <% end %>
-
-            <div class="text-right">
-              <%= link_to_add_association 'Add more', f, :educations, partial: 'educations', class: 'add-buttons pull-right' %>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="row">
+    <!--   <div class="row">
         <div class="col-md-10 col-md-offset-1 card">
           <div class="text-center"><h4>Languages</h4></div>
           <hr>
             <div id="languages">
-              <%= f.fields_for :languages do |language| %>
-                  <%= render 'languages_fields', f: language %>
-              <% end %>
+              <%#= f.fields_for :languages do |language| %>
+                  <%#= render 'languages_fields', f: language %>
+              <%# end %>
 
               <div class="text-right">
-                <%= link_to_add_association 'Add more', f, :languages, partial: 'languages_fields', class: 'add-buttons pull-right' %>
+                <%#= link_to_add_association 'Add more', f, :languages, partial: 'languages_fields', class: 'add-buttons pull-right' %>
               </div>
             </div>
         </div>
-      </div>
+      </div> -->
   <% end %>
 
 </div>
