--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -6,8 +6,8 @@
       <div class="thumbnail">
         <%#= image_tag(resume.avatar.url(:large)) %>
         <div class="caption">
-          <h3><%= resume.name %></h3>
-          <p><%= resume.general_info %></p>
+          <h3><%= resume.name_user %></h3>
+          <p><%= resume.user_info %></p>
           <p>
             <%= link_to 'View', resume, class: 'btn btn-default btn-sm' %>
             <%= link_to 'Edit', edit_resume_path(resume), class: 'btn btn-warning btn-sm' %>
