--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container card" style="margin-top: 15px">
   <div class="row">
     <div class="col-md-4 col-md-offset-1 col-xs-5 col-xs-offset-1">
-      <h3 class="worker-name"> <%= @resume.name %></h3>
-      <p class="worker-info"><%= @resume.general_info %></p>
+      <h3 class="worker-name"> <%= @resume.name_user %></h3>
+      <p class="worker-info"><%= @resume.user_info %></p>
     </div>
     <div class="col-md-3 col-xs-5">
       <%#= image_tag @resume.avatar.url(:small), class: 'circular' %>
@@ -63,45 +63,48 @@
   </div>
   <div class="row">
 
-    <div class="col-md-5 col-md-offset-1">
-      <% if @resume.educations.any? %>
+    <!-- <div class="col-md-5 col-md-offset-1">
+      <%# if @resume.educations.any? %>
       <h4>Education</h4>
-      <% @resume.educations.each do |education| %>
+      <%# @resume.educations.each do |education| %>
           <div class="project-sections-education"></div>
           <div class="project-date project-fields">
-            <%= DateTime.strptime(education.date_from, '%m/%Y').strftime('%B %Y') %> -
-            <% if education.date_to.empty? %>
+            <%#= DateTime.strptime(education.date_from, '%m/%Y').strftime('%B %Y') %> -
+            <%# if education.date_to.empty? %>
                 for now
-            <% else %>
-                <%= DateTime.strptime(education.date_to, '%m/%Y').strftime('%B %Y') %>
-            <% end %>
-            <span class="pull-right"><%= education.place %></span>
+            <%# #else %>
+                <%#= DateTime.strptime(education.date_to, '%m/%Y').strftime('%B %Y') %>
+            <%# end %>
+            <span class="pull-right"><%#= education.place %></span>
           </div>
-          <% if education.level.empty? %>
+          <%# if education.level.empty? %>
               <div class="project-fields">
-                <strong>Description</strong>: <%= education.descrption %>
+                <strong>Description</strong>: <%#= education.descrption %>
               </div>
-          <% else %>
+          <%# else %>
               <div class="project-fields">
-                <strong>Level</strong>: <%= education.level %>
+                <strong>Level</strong>: <%#= education.level %>
               </div>
               <div class="project-fields">
-                <strong>Description</strong>: <%= education.descrption %>
+                <strong>Description</strong>: <%#= education.descrption %>
               </div>
-              <% end %>
-          <% end %>
-      <% end %>
+              <%# end %>
+          <%# end %>
+      <%# end %>
 
-    </div>
+    </div> -->
+
+
+
 
     <div class="col-md-4 col-md-offset-1">
-      <% if @resume.languages.any? %>
+      <%# if @resume.languages.any? %>
       <h4>Languages</h4>
-      <% @resume.languages.each do |language| %>
-          <p><span><%= language.name%>: </span>
-            <span><%= language.level %></span></p>
-          <% end %>
-      <% end %>
+      <%# @resume.languages.each do |language| %>
+          <p><span><%#= language.name%>: </span>
+            <span><%#= language.level %></span></p>
+          <%# end %>
+      <%# end %>
     </div>
   </div>
 
