--- a/app/views/resumes/_form.html.erb
+++ b/app/views/resumes/_form.html.erb
@@ -61,7 +61,7 @@
             </div>
 
             <div class="form-group">
-              <%= f.input :education_description, class: 'ever-inputs', placeholder: 'About Program*' %>
+              <%= f.input :education_description, class: 'ever-inputs', placeholder: 'About Programd*' %>
             </div>
  <div class="text-right">
               <%= link_to new_resume_path, 'Add more', class: 'add-buttons pull-right' %>
